--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -7,10 +7,6 @@
   font-family: "Montserrat", sans-serif;
 }
 
-body {
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
 .wrapper .header {
   background: #29a5d8;
 }
@@ -179,6 +175,166 @@ img {
 .scrollBar ul li .smImg {
   height: 10px;
   width: 10px;
+}
+
+.userPar .userRow {
+  background-color: darkgrey;
+  height: 97vh;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+}
+.userPar .side1 {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.userPar .side1 .mainMenu {
+  padding-top: 50px;
+}
+.userPar .side1 .mainMenu p {
+  color: rgba(255, 255, 255, 0.8);
+  border-bottom: 1px solid black;
+  padding: 10px 0px;
+  padding-left: 35px;
+}
+.userPar .side1 .mainMenu p svg {
+  margin-right: 10px;
+  font-size: 24px;
+  color: #61983a;
+}
+.userPar .side1 .mainMenu .pageName {
+  color: white !important;
+  padding-bottom: 60px;
+}
+.userPar .side1 .mainMenu .pageName svg {
+  color: #5e6900;
+}
+.userPar .side1 .mainMenu .dropDown {
+  padding-top: 30px;
+}
+.userPar .side2 {
+  height: 96vh;
+  background-color: whitesmoke;
+  padding-left: 0px;
+  padding-right: 0px;
+  overflow-y: scroll;
+}
+.userPar .side2 .searchInp {
+  padding-left: 30px;
+  background-color: white;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  width: 100%;
+}
+.userPar .side2 .searchInp svg {
+  font-size: 24px;
+}
+.userPar .side2 .searchInp input {
+  border: none;
+  margin-left: 10px;
+  width: 80%;
+  padding: 10px 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+}
+.userPar .side2 .usersMenu .users {
+  padding-top: 10px;
+}
+.userPar .side2 .usersMenu .users svg {
+  font-size: 30px;
+  float: left;
+  margin-right: 10px;
+}
+.userPar .side2 .usersMenu .users .people {
+  padding: 10px 0px;
+  padding-left: 30px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.userPar .side2 .usersMenu .users .people p {
+  font-weight: 500;
+  font-size: 13px;
+}
+.userPar .side2 .usersMenu .users .addFilter {
+  float: right;
+  font-size: 10px;
+  margin-right: 5px;
+}
+.userPar .side2::-webkit-scrollbar {
+  width: 0.3em;
+}
+.userPar .side2::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.8);
+}
+.userPar .side2::-webkit-scrollbar-thumb {
+  background-color: black;
+  outline: 1px solid slategrey;
+}
+.userPar .side3 {
+  height: 96vh;
+  background-color: #ececec;
+  padding-left: 0px;
+  overflow-y: scroll;
+}
+.userPar .side3::-webkit-scrollbar {
+  width: 0.3em;
+}
+.userPar .side3::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.8);
+}
+.userPar .side3::-webkit-scrollbar-thumb {
+  background-color: black;
+  outline: 1px solid slategrey;
+}
+.userPar .side3 .top {
+  padding-top: 100px;
+}
+.userPar .side3 .top .head {
+  height: 65px;
+  background-color: white;
+  text-align: center;
+  padding-left: 0px;
+  margin-right: 0px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.userPar .side3 .top .head p {
+  line-height: 50px;
+  font-size: 20px;
+  margin-bottom: 0rem;
+}
+.userPar .side3 .top .head p svg {
+  margin-right: 15px;
+  font-size: 28px;
+  color: #339979;
+}
+.userPar .side3 .top .head .searchInp svg {
+  font-size: 20px;
+  margin-right: 10px;
+}
+.userPar .side3 .top .head .searchInp input {
+  border: none;
+  margin-left: 10px;
+  width: 80%;
+  padding: 10px 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+}
+.userPar .side3 .top .Main {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 12px;
+  font-size: 18px;
+  font-weight: 500;
+}
+.userPar .side3 .top .Main p {
+  background-color: rgba(2, 103, 103, 0.7);
+  border-radius: 3px;
+  color: white;
+  padding: 5px 10px;
+}
+.userPar .side3 .top .Main svg {
+  font-size: 18px;
 }
 
 @media only screen and (max-width: 768px) {
